@@ -1,4 +1,5 @@
 Oct 14, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Fixed create_server_type_menu bug
 - Added punkbuster (and locked_punkbuster) XPMs
 - Modified create_server_type_menu to show all server types until bug
   can be figured out
